# anturix

./: .env  .env.example  .gitignore  .vercelignore  bun.lockb  codama.json  package-lock.json  package.json  vercel.json  vite.config.ts
anchor/: Anchor.toml  README.md
anchor/programs/anturix/: Cargo.toml
anchor/programs/anturix/src/: constants.rs  errors.rs  events.rs  lib.rs  pyth.rs
anchor/programs/anturix/src/instructions/: accept_duel.rs  buy_expert_lock.rs  cancel_duel.rs  claim_prize.rs  claim_refund.rs  claim_share.rs  claim_ticket.rs  close_poker_pool.rs  create_duel.rs  create_expert_lock.rs  create_poker_pool.rs  expire_cancel_duel.rs  force_cancel_duel.rs  init_profile.rs  join_poker_pool.rs  leave_poker_pool.rs  mod.rs  resolve_duel.rs  resolve_expert_lock.rs  reveal_expert_lock.rs
anchor/programs/anturix/src/state/: duel.rs  expert_lock.rs  mod.rs  poker_pool.rs  position_ticket.rs  user_profile.rs
anchor/programs/anturix/tests/: admin-keypair.json  helpers.rs  test_expert_lock.rs  test_init_profile.rs  test_integration.rs  test_poker_pool.rs  test_public_arena_tickets.rs  test_pyth_duel.rs  test_smart_banter.rs
api/: [[...all]].ts
app/: page.tsx
app/components/: grid-background.tsx
scripts/: devnet-smoke-test.ts
src/: env.d.ts  routeTree.gen.ts  styles.css
src/components/: CoinFlipModal.tsx
src/contexts/: WalletContext.tsx  index.ts
src/data/: mockData.ts
src/hooks/: useAuth.ts
src/lib/: arena.ts
src/routes/: __root.tsx  arena.tsx  calendar.tsx  duel.$duelId.tsx  duel.$legacy.duel.$duelId.tsx  feed.tsx  friends.tsx  index.tsx  (+5 more)
(+19 files in other folders)
