[package]
name = "anturix"
version = "0.1.0"
description = "Anturix — gamified SocialFi duels on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anturix"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
